--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
 <body>
 	<script src="js/jcalc.js" type="text/javascript"></script>
+	<script src="js/jcalc.ui.js" type="text/javascript"></script>
 	<script src="bz.var.ru/resizable.js" type="text/javascript"></script>
 	<script type="text/javascript">
 		function setupApp() {
