--- a/index.html
+++ b/index.html
@@ -3,21 +3,16 @@
 <head>
 	<link rel="stylesheet" href="bz.var.ru/resizable.css" type="text/css" />
 	
+	<script src="bz.var.ru/resizable.js" type="text/javascript"></script>
 	<script src="js/jcalc.js" type="text/javascript"></script>
 	<script src="js/jcalc.ui.js" type="text/javascript"></script>
-	<script src="bz.var.ru/resizable.js" type="text/javascript"></script>
+	<script src="js/jcalc.lib.js" type="text/javascript"></script>
 </head>
 
-<body>
+<body onload="startApp('worksheet')">
 	<style>h2 { text-align: center; }</style>
 	<h2>JCalc</h2>
 	<table id='worksheet' class='resizable' cellspacing='0'/>
-	<script type="text/javascript">
-		window.onload = function() {
-			fillTable('worksheet', 100, 50);
-			ResizableColumns();
-		}
-	</script>
 </body>
 
 </html>
