Tool tips and make formula bar bigger

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <table class="formula" width="70%">
         <tr>
             <td class="formula">
-                <a href="javascript:document.getElementById('selectedFile').click();"><img class="icon" src="img/open16.png"/></a>
-                <a href="javascript:_jcalc.ui.saveAsJSON();"><img class="icon" src="img/save16.png"/></a>
+                <a href="javascript:document.getElementById('selectedFile').click();"><img class="icon" src="img/open16.png" title="Open..."/></a>
+                <a href="javascript:_jcalc.ui.saveAsJSON();"><img class="icon" src="img/save16.png" title="Save as..."/></a>
                 &nbsp;&nbsp;&nbsp;&nbsp;
-                <a href="javascript:_jcalc.ui.importLib('imports');"><img class="icon" src="img/add16.png"/></a>
+                <a href="javascript:_jcalc.ui.importLib('imports');"><img class="icon" src="img/add16.png" title="Import library..."/></a>
             </td>
             <td class="formula title">
                 JCalc
@@ -33,7 +33,7 @@
     <table class="formula">
         <tr>
             <td id="currentCell" class="index">(0, 0)</td>
-            <td class="formula"><input id="formulaBar" type="text" size="80"/></td>
+            <td class="formula"><input id="formulaBar" type="text" size="200"/></td>
         </tr>
     </table>
     <br />
